--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 
 <body>
-    <h1>Hello world</h1>
+   
     <div id="root">
-        <h1>Hello world</h1>
         <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-        <script src="./App.js">
+        <script type="module" src="./src/App.js">
             // how to create a h1 tag in react
             
         </script>
